--- a/Entity/Entity.csproj
+++ b/Entity/Entity.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="AuthUser.cs" />
     <Compile Include="BaseEntity.cs" />
+    <Compile Include="Customer.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
